Edited the title of the suggestion pan and fixed collapsed/expanded logic

--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -362,7 +362,7 @@
 
 
 .collapsed{
-    height: 5vh;
+    height: 3vh;
 }
 
 .suggestion_title{
